--- a/views/admin/user_dashboard/user_lists.erb
+++ b/views/admin/user_dashboard/user_lists.erb
@@ -80,14 +80,14 @@
                                 <p>No Photo Available</p>
                             <% end %>
                         </td>
-                        <th><%= user['access']%></th>
-                        <th>
+                        <td><%= user['access']%></td>
+                        <td>
                             <div class="btn-group btn-group-sm" role="group" aria-label="Button Group">
                                 <button type="submit" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteModal<%= user['user_id']%>"><i class="fa-solid fa-trash"></i></button>
                                 <a href="/detail_user/<%= user['user_id']%>" class="btn btn-info text-white"><i class="fa-solid fa-eye"></i></a>
                                 <a href="/edit_user/<%= user['user_id']%>" class="btn btn-primary"><i class="fa-solid fa-edit"></i></a>
                             </div>
-                        </th>
+                        </td>
                     </tr>
 
                     <!-- Modal -->
