--- a/views/seller/seller_items/view.erb
+++ b/views/seller/seller_items/view.erb
@@ -14,53 +14,43 @@
                 <div class="mb-3 row">
                     <label for="item_name" class="col-sm-2 col-form-label">Item Name</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control-plaintext" id="item_name" name="item_name" value="<%= @item['item_name'] %>" />
-                    </div>
-                </div>
-                <div class="mb-3 row">
-                    <label for="item_brand" class="col-sm-2 col-form-label">Item Brand</label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control-plaintext" id="item_brand" name="item_brand" value="<%= params[:item_brand] %>"/>
-                    </div>
-                </div>
-                <div class="mb-3 row">
-                    <label for="item_description" class="col-sm-2 col-form-label">Description</label>
-                    <div class="col-sm-10">
-                        <textarea class="form-control-plaintext" id="item_description" name="item_description"><%= params[:item_description] %></textarea>
+                        <input type="text" class="form-control-plaintext" id="item_name" name="item_name" readonly value="<%= @item['item_name'] %>" />
                     </div>
                 </div>
                 <div class="mb-3 row">
                     <label for="item_category" class="col-sm-2 col-form-label">Category</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control-plaintext" id="item_category" name="item_category" value="<%= params[:item_category] %>" >
+                        <input type="text" class="form-control-plaintext" id="item_category" name="item_category" readonly value="<%= @item['item_category'] %>" >
                     </div>
                 </div>
                 <div class="mb-3 row">
-                    <label for="item_unit" class="col-sm-2 col-form-label">Unit</label>
+                    <label for="item_brand" class="col-sm-2 col-form-label">Item Brand</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="item_unit" name="item_unit" value="<%= params[:item_unit] %>" >
+                        <input type="text" class="form-control-plaintext" id="item_brand" name="item_brand" readonly value="<%= @item['item_brand'] %>"/>
                     </div>
-                    <% if @errors.any? { |e| e.include?('Item Unit')} %>
-                        <div class="form-text text-danger">
-                            <%= @errors.find { |e| e.include?('Item Unit')} %>
-                        </div>
-                    <% end %>
+                </div>
+                <div class="mb-3 row">
+                    <label for="item_description" class="col-sm-2 col-form-label">Description</label>
+                    <div class="col-sm-10">
+                        <textarea class="form-control-plaintext" id="item_description" name="item_description" readonly><%= @item['item_description'] %></textarea>
+                    </div>
+                </div>
+                <div class="mb-3 row">
+                    <label for="item_unit" class="col-sm-2 col-form-label">SKU</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control-plaintext" id="item_unit" name="item_unit" readonly value="<%= @item['item_unit'] %>" >
+                    </div>
                 </div>
                 <div class="mb-3 row">
                     <label for="item_price" class="col-sm-2 col-form-label">Price</label>
                     <div class="col-sm-10">
-                        <input type="number" class="form-control" id="item_price" name="item_price" value="<%= params[:item_price] %>">
+                        <input type="text" class="form-control-plaintext" id="item_price" name="item_price" readonly value="<%= @item['item_price'] %>">
                     </div>
-                    <% if @errors.any? { |e| e.include?('Item Price')} %>
-                        <div class="form-text text-danger">
-                            <%= @errors.find { |e| e.include?('Item Price')} %>
-                        </div>
-                    <% end %>
                 </div>
                 <div class="mb-3 row">
                     <label for="item_stock" class="col-sm-2 col-form-label">Stock</label>
                     <div class="col-sm-10">
-                        <input type="number" class="form-control" id="item_stock" name="item_stock" value="<%= params[:item_stock] %>">
+                        <input type="text" class="form-control-plaintext" readonly id="item_stock" name="item_stock" value="<%= @item['item_stock'] %>">
                     </div>
                     <% if @errors.any? { |e| e.include?('Item Stock')} %>
                         <div class="form-text text-danger">
@@ -71,29 +61,17 @@
                 <div class="mb-3 row">
                     <label for="item_photo" class="col-sm-2 col-form-label">Item Photo</label>
                     <div class="col-sm-10">
-                        <input type="file" class="form-control" id="item_photo" name="item_photo">
+                        <% if @item['item_photo'] %>
+                            <img src="/uploads/items/<%= @item['item_photo'] %>" alt="<%= @item['name'] %>" style="max-width: 200px"/>
+                        <% end %>
                     </div>
-                    <% if @errors.any? { |e| e.include?('Item Photo')} %>
-                        <div class="form-text text-danger">
-                            <%= @errors.find { |e| e.include?('Item Photo')} %>
-                        </div>
-                    <% end %>
                 </div>
 
                 <div class="mb-3 row">
                     <label for="item_status" class="col-sm-2 col-form-label">Status</label>
                     <div class="col-sm-10">
-                        <select class="form-select" id="item_status" name="item_status">
-                            <option disabled <%= params[:item_status].nil? || params[:item_status].empty? ? 'selected' : '' %> >Open this select menu</option>
-                            <option value="Active" <%= params[:item_status] == "Active" ? "selected" : "" %>>Active</option>
-                            <option value="Inactive" <%= params[:item_status] == "Inactive" ? "selected" : "" %>>Inactive</option>
-                        </select>
+                        <input type="text" class="form-control-plaintext" readonly id="item_status" name="item_status" value="<%= @item['item_status'] %>">
                     </div>
-                    <% if @errors.any? { |e| e.include?('Item Status')} %>
-                        <div class="form-text text-danger">
-                            <%= @errors.find { |e| e.include?('Item Status')} %>
-                        </div>
-                    <% end %>
                 </div>
 
             <!-- Back Button -->
