--- a/views/seller/seller_items/view.erb
+++ b/views/seller/seller_items/view.erb
@@ -44,7 +44,7 @@
                 <div class="mb-3 row">
                     <label for="item_price" class="col-sm-2 col-form-label">Price</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control-plaintext" id="item_price" name="item_price" readonly value="<%= @item['item_price'] %>">
+                        <input type="text" class="form-control-plaintext" id="item_price" name="item_price" readonly value="<%= rupiah_currency(@item['item_price']) %>">
                     </div>
                 </div>
                 <div class="mb-3 row">
