--- a/views/seller/seller_items/item_lists.erb
+++ b/views/seller/seller_items/item_lists.erb
@@ -56,6 +56,13 @@
                 </div>
                 <% session[:success] = nil %>
             <% end %>
+            <% if session[:error] %>
+                <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                    <strong><%= session[:error] %></strong>
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+                <% session[:error] = nil %>
+            <% end %>
             <table id="datatablesSimple">
                 <thead>
                     <tr>
