--- a/views/seller/seller_items/item_lists.erb
+++ b/views/seller/seller_items/item_lists.erb
@@ -95,7 +95,7 @@
                             <div class="btn-group btn-group-sm" role="group" aria-label="Button Group">
                                 <button type="submit" class="btn btn-danger"><i class="fa-solid fa-trash"></i></button>
                                 <a href="/view_an_item/<%= item['item_id'] %>" class="btn btn-info text-white"><i class="fa-solid fa-eye"></i></a>
-                                <a href="#" class="btn btn-primary"><i class="fa-solid fa-edit"></i></a>
+                                <a href="/edit_an_item/<%= item['item_id'] %>" class="btn btn-primary"><i class="fa-solid fa-edit"></i></a>
                             </div>
                     </tr>
                     <% end %>
