--- a/views/seller/seller_items/edit_item.erb
+++ b/views/seller/seller_items/edit_item.erb
@@ -71,7 +71,11 @@
             <div class="mb-3 row">
                 <label for="item_status" class="col-sm-2 col-form-label">Status</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="item_status" name="item_status" value="<%= @item['item_status'] %>">
+                    <select type="text" class="form-select" id="item_status" name="item_status">
+                        <option disabled <%= (@item['item_status'].nil? || @item['item_status'].empty?) ? 'selected' : '' %> >Open this select menu</option>
+                        <option value="Active" <%= (@item['item_status'] == "Active" || params[:item_status] == "Active") ? "selected" : "" %>>Active</option>
+                        <option value="Inactive" <%= (@item['item_status'] == "Inactive" || params[:item_status] == "Inactive") ? "selected" : "" %>>Inactive</option>
+                    </select>
                 </div>
             </div>
 
