--- a/views/seller/seller_items/add_item.erb
+++ b/views/seller/seller_items/add_item.erb
@@ -57,7 +57,7 @@
                     <% end %>
                 </div>
                 <div class="mb-3 row">
-                    <label for="item_unit" class="col-sm-2 col-form-label">Unit</label>
+                    <label for="item_unit" class="col-sm-2 col-form-label">SKU</label>
                     <div class="col-sm-10">
                         <input type="text" class="form-control" id="item_unit" name="item_unit" value="<%= params[:item_unit] %>" >
                     </div>
