--- a/views/seller/seller_items/edit_item.erb
+++ b/views/seller/seller_items/edit_item.erb
@@ -8,79 +8,121 @@
             <i class="fas fa-user me-1"></i>
         </div>
         <div class="card-body">
-            <div class="mb-3">
-                <input type="hidden" name="_method" value="post">
-            </div>
-            <div class="mb-3 row">
-                <label for="item_name" class="col-sm-2 col-form-label">Item Name</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" id="item_name" name="item_name" value="<%= @item['item_name'] %>" />
+            <form action="/edit_an_item/<%= @item['item_id'] %>" method="post" enctype="multipart/form-data">
+                <div class="mb-3">
+                    <input type="hidden" name="_method" value="post">
                 </div>
-            </div>
-            <div class="mb-3 row">
-                <label for="item_category" class="col-sm-2 col-form-label">Category</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" id="item_category" name="item_category" value="<%= @item['item_category'] %>" >
-                </div>
-            </div>
-            <div class="mb-3 row">
-                <label for="item_brand" class="col-sm-2 col-form-label">Item Brand</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" id="item_brand" name="item_brand" value="<%= @item['item_brand'] %>"/>
-                </div>
-            </div>
-            <div class="mb-3 row">
-                <label for="item_description" class="col-sm-2 col-form-label">Description</label>
-                <div class="col-sm-10">
-                    <textarea class="form-control" id="item_description" name="item_description"><%= @item['item_description'] %></textarea>
-                </div>
-            </div>
-            <div class="mb-3 row">
-                <label for="item_unit" class="col-sm-2 col-form-label">SKU</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" id="item_unit" name="item_unit" value="<%= @item['item_unit'] %>" >
-                </div>
-            </div>
-            <div class="mb-3 row">
-                <label for="item_price" class="col-sm-2 col-form-label">Price</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" id="item_price" name="item_price" value="<%= @item['item_price'] %>">
-                </div>
-            </div>
-            <div class="mb-3 row">
-                <label for="item_stock" class="col-sm-2 col-form-label">Stock</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" id="item_stock" name="item_stock" value="<%= @item['item_stock'] %>">
-                </div>
-                <% if @errors.any? { |e| e.include?('Item Stock')} %>
-                    <div class="form-text text-danger">
-                        <%= @errors.find { |e| e.include?('Item Stock')} %>
+                <div class="mb-3 row">
+                    <label for="item_name" class="col-sm-2 col-form-label">Item Name</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" id="item_name" name="item_name" value="<%= @item['item_name'] %>" />
                     </div>
-                <% end %>
-            </div>
-            <div class="mb-3 row">
-                <label for="item_photo" class="col-sm-2 col-form-label">Item Photo</label>
-                <div class="col-sm-10">
-                    <% if @item['item_photo'] %>
-                        <img src="/uploads/items/<%= @item['item_photo'] %>" alt="<%= @item['name'] %>" style="max-width: 200px"/>
+                    <% if @errors.any? { |e| e.include?('Item Name')} %>
+                        <div class="form-text text-danger">
+                            <%= @errors.find { |e| e.include?('Item Name')} %>
+                        </div>
                     <% end %>
-                    <input type="file" class="form-control" name="item_photo" id="item_photo">
                 </div>
-            </div>
-
-            <div class="mb-3 row">
-                <label for="item_status" class="col-sm-2 col-form-label">Status</label>
-                <div class="col-sm-10">
-                    <select type="text" class="form-select" id="item_status" name="item_status">
-                        <option disabled <%= (@item['item_status'].nil? || @item['item_status'].empty?) ? 'selected' : '' %> >Open this select menu</option>
-                        <option value="Active" <%= (@item['item_status'] == "Active" || params[:item_status] == "Active") ? "selected" : "" %>>Active</option>
-                        <option value="Inactive" <%= (@item['item_status'] == "Inactive" || params[:item_status] == "Inactive") ? "selected" : "" %>>Inactive</option>
-                    </select>
+                <div class="mb-3 row">
+                    <label for="item_category" class="col-sm-2 col-form-label">Category</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" id="item_category" name="item_category" value="<%= @item['item_category'] %>" >
+                    </div>
+                    <% if @errors.any? { |e| e.include?('Item Category')} %>
+                        <div class="form-text text-danger">
+                            <%= @errors.find { |e| e.include?('Item Category')} %>
+                        </div>
+                    <% end %>
                 </div>
-            </div>
+                <div class="mb-3 row">
+                    <label for="item_brand" class="col-sm-2 col-form-label">Item Brand</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" id="item_brand" name="item_brand" value="<%= @item['item_brand'] %>"/>
+                    </div>
+                    <% if @errors.any? { |e| e.include?('Item Brand')} %>
+                        <div class="form-text text-danger">
+                            <%= @errors.find { |e| e.include?('Item Brand')} %>
+                        </div>
+                    <% end %>
+                </div>
+                <div class="mb-3 row">
+                    <label for="item_description" class="col-sm-2 col-form-label">Description</label>
+                    <div class="col-sm-10">
+                        <textarea class="form-control" id="item_description" name="item_description"><%= @item['item_description'] %></textarea>
+                    </div>
+                    <% if @errors.any? { |e| e.include?('Item Description')} %>
+                        <div class="form-text text-danger">
+                            <%= @errors.find { |e| e.include?('Item Description')} %>
+                        </div>
+                    <% end %>
+                </div>
+                <div class="mb-3 row">
+                    <label for="item_unit" class="col-sm-2 col-form-label">SKU</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" id="item_unit" name="item_unit" value="<%= @item['item_unit'] %>" >
+                    </div>
+                    <% if @errors.any? { |e| e.include?('Item Unit')} %>
+                        <div class="form-text text-danger">
+                            <%= @errors.find { |e| e.include?('Item Unit')} %>
+                        </div>
+                    <% end %>
+                </div>
+                <div class="mb-3 row">
+                    <label for="item_price" class="col-sm-2 col-form-label">Price</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" id="item_price" name="item_price" value="<%= @item['item_price'] %>">
+                    </div>
+                    <% if @errors.any? { |e| e.include?('Item Price')} %>
+                        <div class="form-text text-danger">
+                            <%= @errors.find { |e| e.include?('Item Price')} %>
+                        </div>
+                    <% end %>
+                </div>
+                <div class="mb-3 row">
+                    <label for="item_stock" class="col-sm-2 col-form-label">Stock</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" id="item_stock" name="item_stock" value="<%= @item['item_stock'] %>">
+                    </div>
+                    <% if @errors.any? { |e| e.include?('Item Stock')} %>
+                        <div class="form-text text-danger">
+                            <%= @errors.find { |e| e.include?('Item Stock')} %>
+                        </div>
+                    <% end %>
+                </div>
+                <div class="mb-3 row">
+                    <label for="item_photo" class="col-sm-2 col-form-label">Item Photo</label>
+                    <div class="col-sm-10">
+                        <% if @item['item_photo'] %>
+                            <img src="/uploads/items/<%= @item['item_photo'] %>" alt="<%= @item['name'] %>" style="max-width: 200px"/>
+                        <% end %>
+                        <input type="file" class="form-control" name="item_photo" id="item_photo">
+                    </div>
+                    <% if @errors.any? { |e| e.include?('Item Photo')} %>
+                        <div class="form-text text-danger">
+                            <%= @errors.find { |e| e.include?('Item Photo')} %>
+                        </div>
+                    <% end %>
+                </div>
 
-            <!-- Submit Button -->
-            <button type="submit" class="btn btn-outline-primary float-end">Submit</button>
+                <div class="mb-3 row">
+                    <label for="item_status" class="col-sm-2 col-form-label">Status</label>
+                    <div class="col-sm-10">
+                        <select type="text" class="form-select" id="item_status" name="item_status">
+                            <option disabled <%= (@item['item_status'].nil? || @item['item_status'].empty?) ? 'selected' : '' %> >Open this select menu</option>
+                            <option value="Active" <%= (@item['item_status'] == "Active" || params[:item_status] == "Active") ? "selected" : "" %>>Active</option>
+                            <option value="Inactive" <%= (@item['item_status'] == "Inactive" || params[:item_status] == "Inactive") ? "selected" : "" %>>Inactive</option>
+                        </select>
+                    </div>
+                    <% if @errors.any? { |e| e.include?('Item Status')} %>
+                        <div class="form-text text-danger">
+                            <%= @errors.find { |e| e.include?('Item Status')} %>
+                        </div>
+                    <% end %>
+                </div>
+
+                <!-- Submit Button -->
+                <button type="submit" class="btn btn-outline-primary float-end">Submit</button>
+            </form>
 
             <!-- Back Button -->
             <a href="/item_lists/<%= current_user['user_id'] %>"  class="btn btn-outline-secondary float-start">Back</a>
