--- a/views/seller/seller_items/item_lists.erb
+++ b/views/seller/seller_items/item_lists.erb
@@ -93,10 +93,32 @@
                         <td><%= item['item_status'] %></td>
                         <td>
                             <div class="btn-group btn-group-sm" role="group" aria-label="Button Group">
-                                <button type="submit" class="btn btn-danger"><i class="fa-solid fa-trash"></i></button>
+                                <button type="submit" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteModal<%= item['item_id'] %>" ><i class="fa-solid fa-trash"></i></button>
                                 <a href="/view_an_item/<%= item['item_id'] %>" class="btn btn-info text-white"><i class="fa-solid fa-eye"></i></a>
                                 <a href="/edit_an_item/<%= item['item_id'] %>" class="btn btn-primary"><i class="fa-solid fa-edit"></i></a>
                             </div>
+
+                            <!-- Modal -->
+                            <div class="modal fade" id="deleteModal<%= item['item_id'] %>" tabindex="-1" aria-labelledby="deleteModalLabel<%= item['item_id'] %>" aria-hidden="true">
+                                <div class="modal-dialog">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h3 class="modal-title fs-5" id="deleteModalLabel<%= item['item_id'] %>">Confirm Deletion</h3>
+                                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                        </div>
+                                        <div class="modal-body">
+                                            Are you sure want to delete this Item ?
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                            <form action="/delete_an_item/<%= item['item_id'] %>" method="POST">
+                                                <button type="submit" class="btn btn-primary">Delete</button>
+                                            </form>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </td>
                     </tr>
                     <% end %>
                 </tbody>
