--- a/views/seller/seller_items/item_lists.erb
+++ b/views/seller/seller_items/item_lists.erb
@@ -90,7 +90,13 @@
                         <td>
                             <img src="/uploads/items/<%= item['item_photo'] %>" alt="Item Photo" width="150">
                         </td>
-                        <td><%= item['item_status'] %></td>
+                        <td>
+                            <% if item['item_status'] == "Active" %>
+                                <span class="badge bg-success">Active</span>
+                            <% else %>
+                                <span class="badge bg-danger">Inactive</span>
+                            <% end %>
+                        </td>
                         <td>
                             <div class="btn-group btn-group-sm" role="group" aria-label="Button Group">
                                 <button type="submit" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteModal<%= item['item_id'] %>" ><i class="fa-solid fa-trash"></i></button>
