--- a/views/admin/seller_dashboard/hidden_seller.erb
+++ b/views/admin/seller_dashboard/hidden_seller.erb
@@ -39,6 +39,7 @@
                             <td>
                                 <div class="btn-group-sm btn-group" role="group" aria-label="Button Group">
                                     <button type="submit" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteModal<%= seller['seller_id'] %>"><i class="fa-solid fa-trash"></i></button>
+                                    <a href="/edit_hidden_seller/<%= seller['seller_id'] %>" class="btn btn-info text-white btn-sm mb-1"><i class="fa-solid fa-edit"></i></a>
                                 </div>
                             </td>
                         </tr>
