update sidebar page

--- a/views/layouts/admin/sidebar.erb
+++ b/views/layouts/admin/sidebar.erb
@@ -32,14 +32,22 @@
                         <div class="sb-nav-link-icon"><i class="fa-solid fa-store"></i></div>
                         Store Lists
                     </a>
+                    <a class="nav-link" href="/store_lists">
+                        <div class="sb-nav-link-icon"><i class="fa-solid fa-store"></i></div>
+                        Transaction Lists
+                    </a>
                 <% elsif current_user['access'].to_i == 2 %>
                     <a class="nav-link" href="/item_lists/<%= current_user['user_id'] %>">
                         <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
                         Item Lists
                     </a>
                     <a class="nav-link" href="#">
-                        <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
-                        Transactions
+                        <div class="sb-nav-link-icon"><i class="fas fa-sitemap"></i></div>
+                        Transaction Status
+                    </a>
+                    <a class="nav-link" href="#">
+                        <div class="sb-nav-link-icon"><i class="fas fa-tent"></i></div>
+                        Transaction Items
                     </a>
                 <% end %>
             </div>
