--- a/views/layouts/admin/sidebar.erb
+++ b/views/layouts/admin/sidebar.erb
@@ -25,15 +25,15 @@
                         Seller Lists
                     </a>
                     <a class="nav-link" href="/seller_item_lists">
-                        <div class="sb-nav-link-icon"><i class="fa-solid fa-user"></i></div>
+                        <div class="sb-nav-link-icon"><i class="fa-solid fa-warehouse"></i></div>
                         Seller Items Lists
                     </a>
                     <a class="nav-link" href="/store_lists">
-                        <div class="sb-nav-link-icon"><i class="fa-solid fa-store"></i></div>
+                        <div class="sb-nav-link-icon"><i class="fa-solid fa-sitemap"></i></div>
                         Store Lists
                     </a>
                     <a class="nav-link" href="/store_lists">
-                        <div class="sb-nav-link-icon"><i class="fa-solid fa-store"></i></div>
+                        <div class="sb-nav-link-icon"><i class="fa-solid fa-tent"></i></div>
                         Seller Transaction Lists
                     </a>
                 <% elsif current_user['access'].to_i == 2 %>
