update seller_item_lists page

--- a/views/admin/seller_dashboard/seller_item_lists.erb
+++ b/views/admin/seller_dashboard/seller_item_lists.erb
@@ -21,8 +21,14 @@
                 <thead>
                     <tr>
                         <th>No</th>
-                        <th>Seller Identity</th>
-                        <th>Action</th>
+                        <th>Seller Name</th>
+                        <th>Store Name</th>
+                        <th>Store Photo</th>
+                        <th>Item Name</th>
+                        <th>Item Brand</th>
+                        <th>Item Category</th>
+                        <th>Item Photo</th>
+                        <th>Item Price</th>
                     </tr>
                 </thead>
                 <tbody>
