update seller_item_lists function in main.rb

--- a/views/admin/seller_dashboard/seller_item_lists.erb
+++ b/views/admin/seller_dashboard/seller_item_lists.erb
@@ -22,6 +22,7 @@
                     <tr>
                         <th>No</th>
                         <th>Seller Name</th>
+                        <th>Seller Photo</th>
                         <th>Store Name</th>
                         <th>Store Photo</th>
                         <th>Item Name</th>
