--- a/views/seller/seller_panel/index.erb
+++ b/views/seller/seller_panel/index.erb
@@ -6,16 +6,16 @@
     <div class="row">
         <div class="col-xl-3 col-md-6">
             <div class="card bg-primary text-white mb-4">
-                <div class="card-body">Primary Card</div>
+                <div class="card-body"><%= seller_item_count_for(current_user['user_id']) %> Items</div>
                 <div class="card-footer d-flex align-items-center justify-content-between">
-                    <a class="small text-white stretched-link" href="#">View Details</a>
+                    <a class="small text-white stretched-link" href="/item_lists/<%= current_user['user_id'] %>">View Details</a>
                     <div class="small text-white"><i class="fas fa-angle-right"></i></div>
                 </div>
             </div>
         </div>
         <div class="col-xl-3 col-md-6">
             <div class="card bg-warning text-white mb-4">
-                <div class="card-body"><i class="fas fa-user"></i> 3 Users</div>
+                <div class="card-body"><i class="fas fa-user"></i>Transaction</div>
                 <div class="card-footer d-flex align-items-center justify-content-between">
                     <a class="small text-white text-decoration-none" href="/admin">View Details</a>
                     <div class="small text-white"><i class="fas fa-angle-right"></i></div>
