--- a/views/layouts/user/template.erb
+++ b/views/layouts/user/template.erb
@@ -44,8 +44,28 @@
             <% end %>
 
             <li class="nav-item">
-              <a class="nav-link text-white" href="/logout">Log Out</a>
+              <button class="nav-link text-white" data-bs-toggle="modal" data-bs-target="#exampleModal">Log Out</button>
             </li>
+
+            <!-- Modal -->
+            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Log Out</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  </div>
+                  <div class="modal-body">
+                    Are You Sure want to log out ?
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <a href="/logout" class="btn btn-primary">Log Out</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+
           </ul>
         </div>
       </div>
