--- a/views/seller/store_panel/view_store.erb
+++ b/views/seller/store_panel/view_store.erb
@@ -1,7 +1,8 @@
 <div class="container-fluid px-4">
-    <h1 class="mt-4">Dashboard</h1>
+    <h1 class="mt-4">Store Profile</h1>
     <ol class="breadcrumb mb-4">
-        <li class="breadcrumb-item active">View Store Profile</li>
+        <li class="breadcrumb-item"><a href="/seller_dashboard/<%= current_user['user_id'] %>">Dashboard</a></li>
+        <li class="breadcrumb-item active">Store Bio</li>
     </ol>
     <div class="card mb-4">
         <div class="card-header">
@@ -9,12 +10,6 @@
             View <%= @store['store_name'] %> Store
         </div>
         <div class="card-body">
-            <% if flash[:success] %>
-                <div class="alert alert-success alert-dismissible fade show my-2" role="alert">
-                    <%= flash[:success] %>
-                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                </div>
-            <% end %>
             <div class="mb-3 row">
                 <label for="name" class="col-sm-2 col-form-label">Owner Name</label>
                 <div class="col-sm-10">
