--- a/views/seller/store_panel/add_my_store.erb
+++ b/views/seller/store_panel/add_my_store.erb
@@ -1,7 +1,10 @@
 <div class="container-fluid px-4">
-    <h1 class="mt-4">Dashboard</h1>
+    <h1 class="mt-4">Add My Store</h1>
     <ol class="breadcrumb mb-4">
-        <li class="breadcrumb-item active">Adding Store Profile</li>
+        <li class="breadcrumb-item">
+            <a href="/seller_dashboard/<%= current_user['user_id'] %>">Dashboard</a>
+        </li>
+        <li class="breadcrumb-item active">Create My Store</li>
     </ol>
     <div class="card mb-4">
         <div class="card-header">
