adding checkout button in card  user index page

--- a/views/user/index.erb
+++ b/views/user/index.erb
@@ -61,6 +61,7 @@
                             <p class="catd-text">
                                 <strong>Unit:</strong> <%= item['item_unit'] %>
                             </p>
+                            <a href="#" class="btn btn-primary float-end">Checkout</a>
                         </div>
                     </div>
                 </div>
