update seller register page

--- a/views/sign/seller/register.erb
+++ b/views/sign/seller/register.erb
@@ -111,7 +111,7 @@
             </form>
         </div>
         <div class="card-footer text-center py-3">
-            <div class="small">Have an account?<a href="/login">Go to login</a></div>
+            <div class="small">Don't want to create a store ? <a href="/account">Go to Homepage</a></div>
         </div>
     </div>
 </div>
