--- a/views/layouts/user/template.erb
+++ b/views/layouts/user/template.erb
@@ -29,7 +29,9 @@
           <ul class="navbar-nav mb-2 mb-lg-0">
             
             <li class="nav-item">
-              <a class="nav-link text-white" href="#">My Wishlists</a>
+              <a class="nav-link text-white" href="#">
+                <img src="/img/icons/heart-fill.svg" alt="">
+              </a>
             </li>
             <% if current_user['access'].to_i == 1 %>
               <!-- Show "Open Store" only for users with access level 1 -->
