adding logout button in user template

--- a/views/layouts/user/template.erb
+++ b/views/layouts/user/template.erb
@@ -30,7 +30,7 @@
             
             <li class="nav-item">
               <a class="nav-link text-white" href="#">
-                <img src="/img/icons/heart-fill.svg" alt="">
+                <img src="/img/icons/heart-fill.svg" alt="My Wishlists">
               </a>
             </li>
             <% if current_user['access'].to_i == 1 %>
@@ -46,7 +46,7 @@
             <% end %>
 
             <li class="nav-item">
-              <button class="nav-link text-white" data-bs-toggle="modal" data-bs-target="#exampleModal">Log Out</button>
+              <button class="nav-link text-white" data-bs-toggle="modal" data-bs-target="#exampleModal"><img src="/img/icons/box-arrow-right.svg" alt="My Wishlists"></button>
             </li>
 
             <!-- Modal -->
