update admin icons mainpage

--- a/views/layouts/admin/navbar.erb
+++ b/views/layouts/admin/navbar.erb
@@ -32,7 +32,9 @@
               <% end %>
                 <li><a class="dropdown-item" href="">Activity Log</a></li>
                 <li><hr class="dropdown-divider" /></li>
-                <li><button class="dropdown-item" data-bs-toggle="modal" data-bs-target="#Logout">Logout</button></li>
+                <li>
+                  <button class="dropdown-item" data-bs-toggle="modal" data-bs-target="#Logout">Logout</button>
+                </li>
             </ul>
         </li>
     </ul>
