--- a/views/layouts/user/template.erb
+++ b/views/layouts/user/template.erb
@@ -48,7 +48,7 @@
             <% end %>
 
             <li class="nav-item">
-              <button class="nav-link text-white" data-bs-toggle="modal" data-bs-target="#exampleModal"><img src="/img/icons/box-arrow-right.svg" alt="My Wishlists"></button>
+              <button class="nav-link text-white" data-bs-toggle="modal" data-bs-target="#exampleModal"><img src="/img/icons/box-arrow-right.svg" alt="Log Out"></button>
             </li>
 
             <!-- Modal -->
