--- a/views/admin/index.erb
+++ b/views/admin/index.erb
@@ -6,7 +6,7 @@
     <div class="row">
         <div class="col-xl-3 col-md-6">
             <div class="card bg-primary text-white mb-4">
-                <div class="card-body"> <%= seller_count %> Seller</div>
+                <div class="card-body"><i class="fa-solid fa-user-tie"></i> <%= seller_count %> Seller</div>
                 <div class="card-footer d-flex align-items-center justify-content-between">
                     <a class="small text-white stretched-link" href="/seller_lists">View Details</a>
                     <div class="small text-white"><i class="fas fa-angle-right"></i></div>
@@ -24,7 +24,7 @@
         </div>
         <div class="col-xl-3 col-md-6">
             <div class="card bg-success text-white mb-4">
-                <div class="card-body"> <%= store_count %> Stores</div>
+                <div class="card-body"><i class="fa-solid fa-store"></i> <%= store_count %> Stores</div>
                 <div class="card-footer d-flex align-items-center justify-content-between">
                     <a class="small text-white stretched-link" href="/store_lists">View Details</a>
                     <div class="small text-white"><i class="fas fa-angle-right"></i></div>
@@ -33,7 +33,7 @@
         </div>
         <div class="col-xl-3 col-md-6">
             <div class="card bg-danger text-white mb-4">
-                <div class="card-body"><%= seller_item_count %> Seller Item Lists</div>
+                <div class="card-body"><i class="fa-solid fa-warehouse"></i> <%= seller_item_count %> Seller Item Lists</div>
                 <div class="card-footer d-flex align-items-center justify-content-between">
                     <a class="small text-white stretched-link" href="/seller_item_lists">View Details</a>
                     <div class="small text-white"><i class="fas fa-angle-right"></i></div>
