update admin sidebar icons

--- a/views/layouts/admin/sidebar.erb
+++ b/views/layouts/admin/sidebar.erb
@@ -25,7 +25,7 @@
                         Seller Lists
                     </a>
                     <a class="nav-link" href="/store_lists">
-                        <div class="sb-nav-link-icon"><i class="fa-solid fa-sitemap"></i></div>
+                        <div class="sb-nav-link-icon"><i class="fa-solid fa-store"></i></div>
                         Store Lists
                     </a>
                     <a class="nav-link" href="/seller_item_lists">
@@ -33,7 +33,7 @@
                         Seller Items Lists
                     </a>
                     <a class="nav-link" href="/store_lists">
-                        <div class="sb-nav-link-icon"><i class="fa-solid fa-tent"></i></div>
+                        <div class="sb-nav-link-icon"><i class="fa-solid fa-sitemap"></i></div>
                         Seller Transaction Lists
                     </a>
                 <% elsif current_user['access'].to_i == 2 %>
