update icons admin pages

--- a/views/admin/seller_dashboard/seller_lists.erb
+++ b/views/admin/seller_dashboard/seller_lists.erb
@@ -6,7 +6,7 @@
 
     <div class="card mb-4">
         <div class="card-header">
-            <i class="fas fa-table me-1"></i>
+            <i class="fas fa-user-tie me-1"></i>
             Seller Lists
         </div>
         <div class="card-body">
