--- a/views/layouts/admin/sidebar.erb
+++ b/views/layouts/admin/sidebar.erb
@@ -32,7 +32,7 @@
                         <div class="sb-nav-link-icon"><i class="fa-solid fa-warehouse"></i></div>
                         Seller Items Lists
                     </a>
-                    <a class="nav-link" href="/store_lists">
+                    <a class="nav-link" href="#">
                         <div class="sb-nav-link-icon"><i class="fa-solid fa-sitemap"></i></div>
                         Seller Transaction Lists
                     </a>
