--- a/views/admin/seller_dashboard/seller_item_lists.erb
+++ b/views/admin/seller_dashboard/seller_item_lists.erb
@@ -1,13 +1,13 @@
 <div class="container-fluid px-4">
     <h1 class="mt-4">Dashboard</h1>
     <ol class="breadcrumb mb-4">
-        <li class="breadcrumb-item active">Seller Lists</li>
+        <li class="breadcrumb-item active">Seller Item Lists</li>
     </ol>
 
     <div class="card mb-4">
         <div class="card-header">
-            <i class="fas fa-table me-1"></i>
-            Seller Lists
+            <i class="fas fa-warehouse me-1"></i>
+            Item Lists
         </div>
         <div class="card-body">
             <% if session[:success] %>
