--- a/views/admin/user_dashboard/user_lists.erb
+++ b/views/admin/user_dashboard/user_lists.erb
@@ -5,7 +5,7 @@
     </ol>
     <div class="card mb-4">
         <div class="card-header">
-            <i class="fas fa-table me-1"></i>
+            <i class="fas fa-users me-1"></i>
             User Lists
         </div>
         <div class="card-body">
