--- a/views/user/no_account/index.erb
+++ b/views/user/no_account/index.erb
@@ -31,7 +31,7 @@
                             <p class="catd-text">
                                 <strong>Unit:</strong> <%= item['item_unit'] %>
                             </p>
-                            <a href="/view_detail_item/<%= item['item_id'] %>" class="btn btn-outline-secondary float-start">Detail</a>
+                            <a href="/view_detail_item_no_user/<%= item['item_id'] %>" class="btn btn-outline-secondary float-start">Detail</a>
                             <a href="#" class="btn btn-primary float-end">Checkout</a>
                         </div>
                     </div>
